# lawyerfactory

./: .env.development  .gitignore  :memory:  BACKEND_CONNECTION_FIX.md  BARTLEBY_IMPLEMENTATION_COMPLETE.md  BARTLEBY_INTEGRATION_COMPLETE.md  BARTLEBY_QUICK_SETUP.md  CLEANUP_AND_ENHANCEMENT_COMPLETE.md  CONSOLIDATION_COMPLETE.md  END_TO_END_TESTING_GUIDE.md  FINAL_COMPILATION_ENGINE_IMPLEMENTATION.md  FONT_FIX_DOCUMENTATION.md  GRID_FRAMEWORK_TESTING_CHECKLIST.md  KNOWLEDGE_GRAPH_INTEGRATION_README.md  LEGAL_RESEARCH_INTEGRATION_README.md  LLM_SETTINGS_INTEGRATION_COMPLETE.md  MANUAL_TESTING_GUIDE.md  PHASE_BUTTON_FUNCTIONALITY_FIX.md  PHASE_FUNCTIONALITY_FIXED.md  POST_PRODUCTION_IMPLEMENTATION_SUMMARY.md  REACT_BLACKSCREEN_RESOLUTION.md  README.md  README_CONSOLIDATED.md  README_MULTISWARM.md  SKELETAL_OUTLINE_SYSTEM_README.md  SOF_API_REFERENCE.md  SOF_ARCHITECTURE_DIAGRAMS.md  SOF_QUICK_START.md  SOVIET_INDUSTRIAL_TRANSFORMATION_v6.md  SYSTEM_DOCUMENTATION.md  TESTING_QUICK_START.md  TESTING_REPORT_AUTOMATED.md  TEST_IMPLEMENTATION_REPORT.md  TEST_RESULTS_REPORT.md  USER_GUIDE.md  add_qmarks.py  app.py  assessor.py  cause_of_action_detector.py  claims_matrix_implementation_plan.md  (+102 more)
.health/: backend.status  frontend.status
.roo/: mcp.json  roo-instructions.json  roo-settings.json
agents/: lexomnia.py
configs/: deployment.yml
data/: evidence_table.json  knowledge_graph.json
docs/: ANSWERS_TO_YOUR_QUESTIONS.md  BACKEND_FILES_LOCATION_DUPLICATES.md  BARTLEBY_GUIDE.md  BARTLEBY_REQUIREMENTS.md  COMPLETE_ANALYSIS_SUMMARY.md  DOCUMENTATION_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  EVIDENCE_PIPELINE_INTEGRATION_GUIDE.md  EVIDENCE_PIPELINE_QUICK_REFERENCE.md  EVIDENCE_PROCESSING_PIPELINE.md  FLASK_ROUTES_EXPLAINED.md  FORM_ANALYSIS.md  LLM_PRICING_REFERENCE.md  POST_PRODUCTION_PROTOCOL.md  QUICK_REFERENCE.md  README.md  VISUAL_ARCHITECTURE.md  VISUAL_SUMMARY.md  document_ingestion_pipeline.md  knowledge_graph_state.json  maestro_orchestration_spec.md  team_chart.md  workflow_dag.md
examples/: court_authority_usage_example.py  integration_example.py  tesla_case_validation.py
law_venv/: pyvenv.cfg
lawyerfactory/: agent.py  agent_config_system.py  ai_vector.py  document_models.py  document_type_framework.py  enhanced_workflow.py  file-storage.py  kanban_cli.py  knowledge_graph.py  lawsuit_pipeline.py  mcp_memory_integration.py  models.py  research_artifacts.py  workflow.py
maestro/: __init__.py  database.py  (+15 more)
(+901 files in other folders)
