[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawyerfactory"
version = "0.1.0"
description = "AI-powered legal document processing system"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "LawyerFactory Team"}]
dependencies = [
    # runtime deps (trim as needed)
    "numpy>=1.24",
    "PyPDF2>=3.0",
    "python-docx>=1.0",
    "requests>=2.31",
    # vector/llm backends are optional; guard import in code
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---------- Formatting & Linting ----------
[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"
exclude = """
/(
  .venv
| build
| dist
| vector_clusters
| uploads
| archive
| law_venv
)/
"""

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
known_first_party = ["lawyerfactory"]
force_sort_within_sections = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"
extend-exclude = ["vector_clusters", "uploads", "archive", "law_venv"]
select = [
  "E","F","I",   # pycodestyle/pyflakes/import sort
  "UP",          # pyupgrade (nudges toward modern py)
  "B",           # bugbear
]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["lawyerfactory"]

# ---------- Type checking ----------
[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
# Make pytest import from src/ without PYTHONPATH hacks
pythonpath = ["src"]

# ---------- Ruff as pre-commit style task (optional) ----------
[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"